<resources>
    <string name="app_name">PartyBuddies</string>
    <string name="event">Event</string>
    <string name="event_title">Event title</string>
    <string name="event_location">Event location</string>
    <string name="event_date">Date</string>
    <string name="filter">Filter på kostnad</string>
    <string name="filter_reset">Reset filter</string>
    <string name="big_cost">Kostnad över 50kr</string>
    <string name="small_cost">Kostnad under 50kr</string>
    <string name="event_guest">Guest</string>
    <string name="event_cost">Cost</string>
    <string name="event_category">category</string>
    <string name="page_about">About page</string>
    <string name="about_page">Målgruppen för PartyBuddies är personer som vill festa rejält. När man festar festar man då festar man rejält. Det är även bra att använda PartyBuddies för att bjuda in familj och bekanta till sin egna festivitet eller högtid. Målgruppen för denna app är alla som ska gå eller tar ansvarar om tillställningar </string>
</resources>
