<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.webviewapp.MainActivity">
    <item android:orderInCategory="1"
        android:title="@string/filter">
       <menu>
           <item
               android:id="@+id/small_cost"
               android:orderInCategory="2"
               android:title="@string/small_cost"
               />
           <item
               android:id="@+id/big_cost"
               android:orderInCategory="2"
               android:title="@string/big_cost"
               />
           <item
               android:id="@+id/reset_list"
               android:orderInCategory="3"
               android:title="@string/filter_reset"/>

       </menu>

    </item>

    <item
        android:id="@+id/about_page"
        android:title="@string/page_about"
        android:orderInCategory="2"
        />
</menu>