<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="16dp">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/event_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_img"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/event_title"
        android:textSize="32sp"/>
    <TextView
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/event_location"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_location"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/event_date"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/event_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_date"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/event_guest"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/event_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_guest"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/event_cost"
        />
    <TextView
        android:id="@+id/event_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/event_cost"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/event_category"
        />




</androidx.constraintlayout.widget.ConstraintLayout>