<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/event_img"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/event" />

    <TextView
        android:textSize="32sp"
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/event_img"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/event_title"
        />
    <TextView
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/event_img"
        app:layout_constraintTop_toBottomOf="@id/event_title"
        android:layout_marginStart="16dp"
        android:text="@string/event_location"
        />
    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/event_img"
        app:layout_constraintTop_toBottomOf="@id/event_location"
        android:layout_marginStart="16dp"
        android:text="@string/event_date"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


